tests/sumo/cf_model/errors/testsuite.sumo
# warn if tau is lower than step size
tau_below_stepsize

# warn if tau is lower than step size
stepsize2
